crates/formatter/tests/snapshots/snapshots__synapse__main__delta__57__rooms_version_column_2.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2020 The Matrix.org Foundation C.I.C.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- when we first added the room_version column, it was populated via a background
-- update. We now need it to be populated before synapse starts, so we populate
-- any remaining rows with a NULL room version now. For servers which have completed
-- the background update, this will be pretty quick.

-- the following query will set room_version to NULL if no create event is found for
-- the room in current_state_events, and will set it to '1' if a create event with no
-- room_version is found.

update rooms
set
	room_version = (
		select coalesce(json::json -> 'content' ->> 'room_version', '1')
		from current_state_events cse inner join event_json ej using (event_id)
		where
			cse.room_id = rooms.room_id
			and cse.type = 'm.room.create'
			and cse.state_key = ''
	)
where rooms.room_version is null;

-- we still allow the background update to complete: it has the useful side-effect of
-- populating `rooms` with any missing rooms (based on the current_state_events table).

-- see also rooms_version_column_2.sql.sqlite which has a copy of the above query, using
-- sqlite syntax for the json extraction.
