crates/formatter/tests/snapshots/snapshots__synapse__main__delta__57__rooms_version_column_3.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2020 The Matrix.org Foundation C.I.C.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- When we first added the room_version column to the rooms table, it was populated from
-- the current_state_events table. However, there was an issue causing a background
-- update to clean up the current_state_events table for rooms where the server is no
-- longer participating, before that column could be populated. Therefore, some rooms had
-- a NULL room_version.

-- The rooms_version_column_2.sql.* delta files were introduced to make the populating
-- synchronous instead of running it in a background update, which fixed this issue.
-- However, all of the instances of Synapse installed or updated in the meantime got
-- their rooms table corrupted with NULL room_versions.

-- This query fishes out the room versions from the create event using the state_events
-- table instead of the current_state_events one, as the former still have all of the
-- create events.

update rooms
set
	room_version = (
		select coalesce(json::json -> 'content' ->> 'room_version', '1')
		from state_events se inner join event_json ej using (event_id)
		where
			se.room_id = rooms.room_id
			and se.type = 'm.room.create'
			and se.state_key = ''
		limit 1
	)
where rooms.room_version is null;

-- see also rooms_version_column_3.sql.sqlite which has a copy of the above query, using
-- sqlite syntax for the json extraction.
