crates/formatter/tests/snapshots/snapshots__synapse__main__delta__57__rooms_version_column_3.sqlite.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2020 The Matrix.org Foundation C.I.C.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- see rooms_version_column_3.sql.postgres for details of what's going on here.

update rooms
set
	room_version = (
		select coalesce(json_extract(ej.json, '$.content.room_version'), '1')
		from state_events se inner join event_json ej using (event_id)
		where
			se.room_id = rooms.room_id
			and se.type = 'm.room.create'
			and se.state_key = ''
		limit 1
	)
where rooms.room_version is null;
